--- a/analysis/metafile_bikeshare_final_project.Rmd
+++ b/analysis/metafile_bikeshare_final_project.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "DS241 Final Proeject - DC Bikeshare "
-output: html_notebook
 author: "Alexis Alexander, Gianna Capoccia, Morgan Eaton, and Mateo Sarabia"
 date: "09 December 2023"
+output:
+  html_document:
+    df_print: paged
 ---
 
 ## Background Information
@@ -18,25 +20,7 @@ Following the methods outline in the CRISP-DM Methodology, we initially focused 
 This question pertains to the following: How do we make it safer for people to ride bikes as a means of increasing ridership?
 
 
-## Installing Packages 
-
-Below are the packages should be installed:
-
-```{r}
-install.packages("tidyverse")
-install.packages("janitor")
-install.packages("lubridate")
-install.packages("here")
-install.packages("mapview")
-install.packages("gbfs")
-install.packages("sf")
-install.packages("tmap")
-install.packages("tidycensus")
-install.packages("stingr")
-install.packages("maps")
-install.packages("spData")
-install.packages("viridis")
-```
+## Baseline Packages 
 
 Baseline packages for our analysis: 
 
@@ -56,6 +40,8 @@ library(readr)
 library(maps)
 library(spData)
 library(viridis)
+library(ggridges)
+library(ggbeeswarm)
 ```
 
 ## Accessing and Loading the Databases 
@@ -69,7 +55,6 @@ We are initially looking at the following three data sets:
 ```{r}
 bikes_september <- read_csv(here("data_raw","202309-capitalbikeshare-tripdata.csv")) %>% clean_names()
 bikes_lanes = st_read(here("data_raw", "Bicycle_Lanes.geojson")) %>% clean_names()
-bikes_crashes = st_read(here("data_raw", "Crashes_in_DC.geojson")) %>% clean_names()
 csv_bikes_lanes = read_csv(here("data_raw", "Bicycle_Lanes.csv")) %>% clean_names()
 csv_bikes_crashes = read_csv(here("data_raw", "Crashes_in_DC.csv")) %>% clean_names()
 dc_shape = st_read(here("data_raw","DC_Health_Planning_Neighborhoods.geojson")) %>% clean_names()
@@ -79,7 +64,6 @@ dc_shape = st_read(here("data_raw","DC_Health_Planning_Neighborhoods.geojson")) 
 
 ```{r}
 class(bikes_lanes)
-class(bikes_crashes)
 class(dc_shape)
 class(csv_bikes_crashes)
 class(csv_bikes_lanes)
@@ -256,4 +240,110 @@ tm_shape()+
   tm_dots("protection_of_bikelane", legend.show = FALSE)
 ```
 
+## Creating a Plot to Show a Clearer Comparison of Bike Lanes vs. Injury Type
+
+First, we will attempt to join the bike lane and crash data to create some sort scatter or bar graph to numerical represent this relationship. 
+
+Starting off with the smaller September bike crash data set and grouping the data based on the street name. Then, we will create a new variable that counts the number of accidents per street. 
+
+```{r}
+test_Sept_df1_pivot_bike_crashes = Sept_df1_pivot_bike_crashes %>% 
+  count(nearestintstreetname) %>%
+  rename(number_of_accidents = n)
+
+```
+
+Since this code worked for the smaller data set, we will apply it to the larger crash data. Also, NA, unknown values, alleys, and driveways will be removed as we are only concerned with the streets. We are focus primarily on the interaction of bikes on the roads. 
+
+```{r}
+accidents_df1_pivot_bike_crashes = df1_bike_crashes %>%
+   count(nearestintstreetname) %>%
+  rename(number_of_accidents = n) %>%
+  rename(routename = nearestintstreetname) %>%
+  drop_na() %>%
+  filter(!grepl("Not Found|Alley|Driveway",routename))
+```
+
+Moving on to the bike lane data. Grouping the route name together and counting the number of lane protection for each route. Removing conventional bike lanes from the data set, we want to see if there are less accidents if there are protected lanes. Need to make sure that the data set is a data frame and not a sf object.
+
+```{r}
+df2_pivot_bike_lanes = csv_bikes_lanes %>%
+  pivot_longer(col=c("bikelane_parkinglane_adjacent","bikelane_throughlane_adjacent","bikelane_pocketlane_adjacent"),
+  names_to = "adjacent_to_bikelane",
+  values_to = "direction_of_lane_adjacent") %>%
+pivot_longer(col=c("bikelane_conventional","bikelane_dual_buffered","bikelane_protected", "bikelane_buffered"),
+  names_to = "protection_of_bikelane",
+  values_to = "direction_of_lane_protection") %>%
+  dplyr::select(-bikelane_contraflow) %>%
+  relocate(c(adjacent_to_bikelane,direction_of_lane_adjacent, protection_of_bikelane, direction_of_lane_protection), .after = streettype) %>%
+  mutate(adjacent_to_bikelane = recode(adjacent_to_bikelane, bikelane_throughlane_adjacent = "throughlane", bikelane_pocketlane_adjacent = "pocketlane", bikelane_parkinglane_adjacent = "parkinglane")) %>%
+  mutate(protection_of_bikelane = recode(protection_of_bikelane, bikelane_protected = "protected", bikelane_buffered = "buffered", bikelane_conventional = "conventional", bikelane_dual_protected = "dual_protected", bikelane_dual_buffered = "dual_buffered")) %>%
+   drop_na(c(direction_of_lane_adjacent, direction_of_lane_protection))
+```
+
+
+```{r}
+test_df2_pivot_bike_lanes = df2_pivot_bike_lanes %>% 
+  filter(!grepl("conventional", protection_of_bikelane)) %>%
+  count(routename) %>%
+  rename(number_of_protected_lanes = n)
+
+```
+
+Joining the two data frames together 
+
+```{r}
+test1_df2_pivot_bike_lanes = test_df2_pivot_bike_lanes %>%
+  left_join(accidents_df1_pivot_bike_crashes, by = "routename")
+test1_df2_pivot_bike_lanes[is.na(test1_df2_pivot_bike_lanes)] <- 0
+```
+
+
+Creating a basic plot to see the relationship between number of accidents and protected lanes.
+
+```{r}
+test1_df2_pivot_bike_lanes %>%
+ggplot(aes(number_of_protected_lanes, routename)) +
+  geom_bar(stat="identity")
+```
+
+## Another Test 
+
+```{r}
+test_df1_bike_crashes = df1_pivot_bike_crashes %>%
+  rename(routename = nearestintstreetname) %>%
+  drop_na() %>%
+  filter(!grepl("Not Found|Alley|Driveway",routename)) %>%
+  left_join(test_df2_pivot_bike_lanes, by = "routename")
+
+test_df1_bike_crashes[is.na(test_df1_bike_crashes)] <- 0
+```
+
+```{r}
+test_df1_bike_crashes$fromdate <- as.Date(test_df1_bike_crashes$fromdate)
+test_df1_bike_crashes$fromdate <- as.POSIXct(test_df1_bike_crashes$fromdate, format = "%Y-%m-%d")
+```
+
+
+```{r}
+test_df1_bike_crashes %>%
+  
+ggplot(aes(fromdate, injuries, fill=injuries)) +
+  geom_quasirandom(bandwidth = .05,alpha=.2)+
+   theme(legend.position = "none")+
+  scale_x_datetime(date_breaks="1 month", date_labels="%b")
+```
+
+
+Generally, as the total number of protected lane decreases by route, the number of accidents increases as shown in  the graph below.
+
+```{r}
+test1_df2_pivot_bike_lanes %>%
+ggplot(aes(number_of_protected_lanes, routename, fill = number_of_accidents))+
+  geom_bar(stat="identity")+
+  scale_fill_gradient(low = "antiquewhite2", high="coral4")+
+  labs(x="Total Number of Protected Lanes", y = "Route Name", 
+       title = "Relationship Between the Number of Protected Lanes and Accident Occurence based on the Bike Route", fill = "Number of Accidents")
+
+```
 
